--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,5 @@
 @media screen and (max-width:1100px){
+    
     .item2-text {
         width: 40%;
         padding-left: 0px;
@@ -65,6 +66,10 @@
     .logo{
         width: 24%;
         height: 12vh;
+    }
+    .logo img{
+        width: 100%;
+       height: auto;
     }
     .link-section {
         width: 56%;
@@ -211,14 +216,14 @@
 @media screen and (max-width:580px){
     .navbar{
         justify-content: space-between;
-        padding-left: 4px;
+        padding-left: 6px;
     }
     .logo{
-        width: 40%;
+        width:36%;
     }
     .btn-section{
         justify-content: flex-end;
-        width: 54%;
+        width: 50%;
     }
     .color-text{
         height: 5vh;
@@ -272,8 +277,8 @@
         padding: 10px 0px;
     }
     .item-3 {
-        width: 45%;
-        padding: 12px 0px;
+        width: 46%;
+        padding: 12px 0px 12px 0px;
     }
     .item-3Name,
     .Webpage-name {
@@ -310,20 +315,37 @@
     }
 }
 @media screen and (max-width:430px){
+    .overlay{
+        width: 100%;
+        height:100vh;
+        background-color: black;
+        opacity: 0.80;
+    }
+    .big-heading {
+        font-size: 1.1rem;
+        padding: 10px 0px;
+    }    
+    .item-3-description{
+        font-size: 0.54rem;
+        padding: 6px 0px;
+    }
+
+    .ABOUT-ME-big-heading {
+        font-size: 1.1rem;
+        width: 70%;
+    }
+    .project-heading {
+        width: 74%;
+        padding-left: 16px;
+    }
     
-    .devloper-text,
-    .color-text,
-    .big-heading,
     .form-heading-text{
         font-size: 1.4rem;
     }
-    .item-3-description{
-        font-size: 0.68rem;
-    }
+    
     .get-touch-big-text {
         font-size: 1.2rem;
     }
-    .small-text,
     .get-in-touch-text{
         font-size: 0.80rem;
         padding: 6px 0px;
